@@ -1,21 +1,15 @@
 package com.example.picknwhip_be.domain.home.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 
-import com.example.picknwhip_be.domain.design.entity.DesignGallery;
 import com.example.picknwhip_be.domain.favorite.service.DesignMyPickCheckerService;
 import com.example.picknwhip_be.domain.home.dto.res.PopularCakeResDTO;
-import com.example.picknwhip_be.domain.home.entity.PopularCakeRanking;
-import com.example.picknwhip_be.domain.home.exception.HomeException;
-import com.example.picknwhip_be.domain.home.exception.code.HomeErrorCode;
 import com.example.picknwhip_be.domain.home.repository.PopularCakeRankingRepository;
-import com.example.picknwhip_be.domain.shop.entity.Shop;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import org.junit.jupiter.api.DisplayName;
@@ -37,47 +31,50 @@ class HomePopularCakeServiceTest {
   @Test
   @DisplayName("인기 케이크 Top5 조회 성공 - 로그인 유저 (마이픽 포함)")
   void getPopularCakesTop5_Success_User() {
+    // given
     Long userId = 1L;
     Long pickedDesignId = 100L;
     Long unpickedDesignId = 200L;
 
-    DesignGallery design1 = mock(DesignGallery.class);
-    given(design1.getId()).willReturn(pickedDesignId);
-    given(design1.getDesignName()).willReturn("초코 케이크");
-    given(design1.getImageUrl()).willReturn("img1.jpg");
+    // [Pick&Whip 수정] Entity 대신 DTO를 Mocking 합니다.
+    // 1위: 찜한 케이크
+    PopularCakeResDTO dto1 =
+        PopularCakeResDTO.builder()
+            .rank(1)
+            .designId(pickedDesignId)
+            .cakeName("초코 케이크")
+            .shopName("맛나 베이커리")
+            .isMyPick(false) // DB에서 가져올 땐 false
+            .build();
 
-    Shop shop1 = mock(Shop.class);
-    given(shop1.getId()).willReturn(10L);
-    given(shop1.getShopName()).willReturn("맛나 베이커리");
-    given(shop1.getAverageRating()).willReturn(4.5);
-    given(shop1.getMinPrice()).willReturn(30000);
+    // 2위: 찜 안 한 케이크
+    PopularCakeResDTO dto2 =
+        PopularCakeResDTO.builder()
+            .rank(2)
+            .designId(unpickedDesignId)
+            .cakeName("딸기 케이크")
+            .isMyPick(false) // DB에서 가져올 땐 false
+            .build();
 
-    PopularCakeRanking ranking1 =
-        PopularCakeRanking.builder().ranking(1).design(design1).shop(shop1).orderCount(50L).build();
+    // Repository는 DTO 리스트를 반환한다고 가정
+    given(rankingRepository.findTop5Rankings()).willReturn(List.of(dto1, dto2));
 
-    // 2위 케이크 (마이픽 안함)
-    DesignGallery design2 = mock(DesignGallery.class);
-    given(design2.getId()).willReturn(unpickedDesignId);
-
-    Shop shop2 = mock(Shop.class);
-
-    PopularCakeRanking ranking2 =
-        PopularCakeRanking.builder().ranking(2).design(design2).shop(shop2).orderCount(30L).build();
-
-    given(rankingRepository.findTop5WithDesignAndShop()).willReturn(List.of(ranking1, ranking2));
+    // 찜 목록 확인 로직 Mocking
     given(designMyPickChecker.findPickedDesignIds(eq(userId), anyList()))
         .willReturn(Set.of(pickedDesignId));
 
+    // when
     List<PopularCakeResDTO> result = homePopularCakeService.getPopularCakesTop5(userId);
 
+    // then
     assertThat(result).hasSize(2);
 
-    // 1위 검증 (마이픽 O)
+    // 1위 검증 (Service 로직을 거치며 isMyPick이 true로 변해야 함)
     assertThat(result.get(0).getRank()).isEqualTo(1);
     assertThat(result.get(0).getCakeName()).isEqualTo("초코 케이크");
-    assertThat(result.get(0).isMyPick()).isTrue();
+    assertThat(result.get(0).isMyPick()).isTrue(); // True 확인!
 
-    // 2위 검증 (마이픽 X)
+    // 2위 검증 (isMyPick False 유지)
     assertThat(result.get(1).getDesignId()).isEqualTo(unpickedDesignId);
     assertThat(result.get(1).isMyPick()).isFalse();
   }
@@ -88,30 +85,34 @@ class HomePopularCakeServiceTest {
     // given
     Long userId = null;
 
-    DesignGallery design = mock(DesignGallery.class);
-    given(design.getId()).willReturn(100L);
-    Shop shop = mock(Shop.class);
+    PopularCakeResDTO dto =
+        PopularCakeResDTO.builder().rank(1).designId(100L).isMyPick(false).build();
 
-    PopularCakeRanking ranking =
-        PopularCakeRanking.builder().ranking(1).design(design).shop(shop).orderCount(10L).build();
+    given(rankingRepository.findTop5Rankings()).willReturn(List.of(dto));
 
-    given(rankingRepository.findTop5WithDesignAndShop()).willReturn(List.of(ranking));
-
+    // when
     List<PopularCakeResDTO> result = homePopularCakeService.getPopularCakesTop5(userId);
 
+    // then
     assertThat(result).hasSize(1);
     assertThat(result.get(0).isMyPick()).isFalse();
 
+    // 비로그인이면 찜 확인 로직 호출 X
     verify(designMyPickChecker, never()).findPickedDesignIds(any(), anyList());
   }
 
   @Test
-  @DisplayName("집계된 인기 케이크가 없을 경우 예외 발생")
-  void getPopularCakesTop5_Empty_ThrowsException() {
-    given(rankingRepository.findTop5WithDesignAndShop()).willReturn(List.of());
+  @DisplayName("집계된 인기 케이크가 없을 경우 - 예외 대신 빈 리스트 반환")
+  void getPopularCakesTop5_Empty_ReturnsEmptyList() {
+    // given
+    // [Pick&Whip 수정] 데이터가 없으면 null 또는 빈 리스트를 반환
+    given(rankingRepository.findTop5Rankings()).willReturn(Collections.emptyList());
 
-    assertThatThrownBy(() -> homePopularCakeService.getPopularCakesTop5(1L))
-        .isInstanceOf(HomeException.class)
-        .hasFieldOrPropertyWithValue("errorCode", HomeErrorCode.POPULAR_CAKE_RANKING_NOT_READY);
+    // when
+    List<PopularCakeResDTO> result = homePopularCakeService.getPopularCakesTop5(1L);
+
+    // then
+    // [Pick&Whip 수정] 예외가 터지는지 확인하는 게 아니라, 빈 리스트인지 확인
+    assertThat(result).isEmpty();
   }
 }
